[gd_scene load_steps=10 format=3 uid="uid://4q0hpddgto2k"]

[ext_resource type="Texture2D" uid="uid://c7218f78hwl8o" path="res://Graphics/Gimmicks/springs_yellow.png" id="1"]
[ext_resource type="Script" path="res://Scripts/Gimmicks/Spring.gd" id="2"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(28, 28)

[sub_resource type="Animation" id="3"]
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spring:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(64, 16, 16, 32), Rect2(96, 16, 32, 32), Rect2(80, 16, 16, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spring:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(8, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="4"]
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spring:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(0, 32, 32, 16), Rect2(32, 16, 32, 32), Rect2(0, 16, 32, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spring:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, -8), Vector2(0, 0)]
}

[sub_resource type="Animation" id="5"]
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spring:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(272, 16, 32, 32), Rect2(304, 0, 48, 48), Rect2(240, 16, 32, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spring:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(-8, -8), Vector2(0, 0)]
}

[sub_resource type="Animation" id="6"]
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spring:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(160, 16, 32, 32), Rect2(192, 0, 48, 48), Rect2(128, 16, 32, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spring:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(8, -8), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3avuf"]
_data = {
"SpringRight": SubResource("3"),
"SpringUp": SubResource("4"),
"SpringUpLeft": SubResource("5"),
"SpringUpRight": SubResource("6")
}

[node name="Spring" type="StaticBody2D"]
collision_layer = 8192
collision_mask = 8192
script = ExtResource("2")

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="DiagonalHitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4096

[node name="AreaShape" type="CollisionShape2D" parent="DiagonalHitBox"]
modulate = Color(0, 0.298039, 1, 1)
shape = SubResource("2")
disabled = true

[node name="Spring" type="Sprite2D" parent="."]
texture = ExtResource("1")
region_enabled = true
region_rect = Rect2(0, 16, 32, 16)

[node name="SpringAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3avuf")
}

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
scale = Vector2(2.5, 2.6)

[connection signal="body_entered" from="DiagonalHitBox" to="." method="_on_Diagonal_body_entered"]
